# sleepydiscord-sqmod

./: .gitignore  CMakeLists.txt
include/sqrat/: sqratFunction.h
shared/Base/: Utility.hpp  Utility.inl
sqrat/: CMakeLists.txt
src/: CDiscord.cpp  CDiscord.h  CError.h  CMakeLists.txt  CMessage.cpp  CMessage.h  CSession.cpp  CSession.h  Channel.cpp  Channel.h  Common.cpp  Common.hpp  Constants.cpp  Constants.h  DEmbed.cpp  DEmbed.h  EventHandler.h  Guild.cpp  Guild.h  Message.cpp  Message.h  Module.cpp  Role.cpp  Role.h  ServerMember.cpp  ServerMember.h  User.cpp  User.h
